# utilities-cmake

./: .gitignore  CMakeLists.txt  README.rst
cmake/: Eigen.cmake  FindCaffe.cmake  gtest.cmake
